--- a/Code Salfeet/About Us.html
+++ b/Code Salfeet/About Us.html
@@ -8,7 +8,7 @@
 	<!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
 	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 	<!--===============================================================================================-->
@@ -86,24 +86,25 @@
 
 		</section>
 
-			<footer class="foter">
-					<div class="col-md-12">
-						<p class="pull-left">
-							<small class="block">&copy; All rights reserved*_*</small>
-							<small class="block">Design<a href="#" target="_blank">________</a> Demo Images: <a href="#" target="_blank">______</a></small>
-						</p>
-						<p class="pull-right">
-							<ul class="gtco-social-icons pull-right">
-								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-linkedin"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble"></i></a></li>
-								<li><a href="#"><i class="icon-instagram"></i></a></li>
-							</ul>
-						</p>
-					</div>
-
-			</footer>
+		<footer class="foter">
+			<div class="row copyright">
+				<div class="col-md-12">
+					<p class="pull-left">
+						<small class="block">&copy; All rights reserved</small>
+						<small class="block">Design<a href="#" target="_blank"> Monsters Programming</a>
+					</p>
+					<p class="pull-right">
+						<ul class="gtco-social-icons pull-right">
+							<li><a href="#" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/Fast-Charge-375526599838718/" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-dribbble"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-instagram"></i></a></li>
+						</ul>
+					</p>
+				</div>
+			</div>
+		</footer>
 		<div class="gototop js-top">
 			<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 		</div>
