--- a/Code Salfeet/index.html
+++ b/Code Salfeet/index.html
@@ -302,9 +302,9 @@
 							<div class="gtco-widget">
 								<h3>Connect with us</h3>
 								<ul class="gtco-quick-contact">
-									<li><a href="#"><i class="icon-phone"></i> (رقم)+1 234 567 890</a></li>
-									<li><a href="#"><i class="icon-mail2"></i> fastchargecontact@gmail.com</a></li>
-									<li><a href="https://m.me/188175428474514"><i class="icon-chat"></i> Contact with Messenger</a></li>
+									<li><a href="#" target="_blank"><i class="icon-phone"></i> (رقم)+1 234 567 890</a></li>
+									<li><a href="#" target="_blank"><i class="icon-mail2"></i> fastchargecontact@gmail.com</a></li>
+									<li><a href="https://m.me/375526599838718" target="_blank"><i class="icon-chat"></i> Contact with Messenger</a></li>
 								</ul>
 							</div>
 						</div>
@@ -319,11 +319,11 @@
 							</p>
 							<p class="pull-right">
 								<ul class="gtco-social-icons pull-right">
-									<li><a href="#"><i class="icon-twitter"></i></a></li>
-									<li><a href="#"><i class="icon-facebook"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin"></i></a></li>
-									<li><a href="#"><i class="icon-dribbble"></i></a></li>
-									<li><a href="#"><i class="icon-instagram"></i></a></li>
+									<li><a href="#" target="_blank"><i class="icon-twitter"></i></a></li>
+									<li><a href="https://www.facebook.com/Fast-Charge-375526599838718/" target="_blank"><i class="icon-facebook"></i></a></li>
+									<li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li>
+									<li><a href="#" target="_blank"><i class="icon-dribbble"></i></a></li>
+									<li><a href="#" target="_blank"><i class="icon-instagram"></i></a></li>
 								</ul>
 							</p>
 						</div>
