--- a/Code Salfeet/sign in.html
+++ b/Code Salfeet/sign in.html
@@ -142,7 +142,7 @@ a {
 			<li></li>
 			<li></li>
 		</ul>
-		<div class="foter">
+		<footer class="foter">
 			<div class="row copyright">
 				<div class="col-md-12">
 					<p class="pull-left">
@@ -151,16 +151,16 @@ a {
 					</p>
 					<p class="pull-right">
 						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/Fast-Charge-375526599838718/" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-dribbble"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-instagram"></i></a></li>
 						</ul>
 					</p>
 				</div>
 			</div>
-		</div>
+		</footer>
 
 <!--===============================================================================================-->
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
