--- a/Code Salfeet/welcome.html
+++ b/Code Salfeet/welcome.html
@@ -8,16 +8,6 @@
 	<!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-	<!--===============================================================================================-->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/welcome.css">
 
@@ -27,46 +17,6 @@
 	<link rel="stylesheet" href="css/icomoon.css">
 	<!-- Theme style  -->
 
-		<style>
-			.fast {
-				margin: 20px;
-				font-weight: bold;
-				font-size: 50px;
-				color: #000000;
-			}
-
-
-			ul,
-			ol {
-				margin-top: 0;
-				margin-bottom: 10px;
-				/* float: right; */
-				margin: 0px;
-				padding: 0;
-				color: #000000;
-				font-size: 20px;
-				margin-left: 10px;
-			}
-
-			p {
-				margin: 0 0 10px;
-				font-size: 20px;
-				color: #000000;
-				margin-left: 10px;
-			}
-
-			.c {
-				font-size: 20px;
-				color: #000000;
-
-			}
-
-			.c1 {
-				font-size: 20px;
-				color: #000000;
-
-			}
-		</style>
 </head>
 
 <body>
@@ -267,36 +217,35 @@
 
 					</div>
 			</div>
-	</div>
+
 	</section>
 
 
-	</div>
 
 
 	</form>
 	<footer class="foter">
+		<div class="row copyright">
 			<div class="col-md-12">
 				<p class="pull-left">
-					<small class="block">&copy; All rights reserved*_*</small>
-					<small class="block">Design<a href="#" target="_blank">________</a> Demo Images: <a href="#" target="_blank">______</a></small>
+					<small class="block">&copy; All rights reserved</small>
+					<small class="block">Design<a href="#" target="_blank"> Monsters Programming</a>
 				</p>
 				<p class="pull-right">
 					<ul class="gtco-social-icons pull-right">
-						<li><a href="#"><i class="icon-twitter"></i></a></li>
-						<li><a href="#"><i class="icon-facebook"></i></a></li>
-						<li><a href="#"><i class="icon-linkedin"></i></a></li>
-						<li><a href="#"><i class="icon-dribbble"></i></a></li>
-						<li><a href="#"><i class="icon-instagram"></i></a></li>
+						<li><a href="#" target="_blank"><i class="icon-twitter"></i></a></li>
+						<li><a href="https://www.facebook.com/Fast-Charge-375526599838718/" target="_blank"><i class="icon-facebook"></i></a></li>
+						<li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li>
+						<li><a href="#" target="_blank"><i class="icon-dribbble"></i></a></li>
+						<li><a href="#" target="_blank"><i class="icon-instagram"></i></a></li>
 					</ul>
 				</p>
 			</div>
-
-
-
+		</div>
 	</footer>
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+	</div>
 	</div>
 </body>
 	<!--===============================================================================================-->
