--- a/Code Salfeet/Contact.html
+++ b/Code Salfeet/Contact.html
@@ -5,9 +5,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
+<link rel="stylesheet" href="css/animate.css">
 	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <!--===============================================================================================-->
@@ -21,7 +22,6 @@
 <!--===============================================================================================-->
 
 		<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
 
@@ -127,59 +127,23 @@
 		<li></li>
 		<li></li>
 	</ul>
-	<footer id="gtco-footer" role="contentinfo" style="height: 410px;">
-		<div class="gtco-container">
-			<div class="row row-p	b-md">
-
-				<div class="col-md-4">
-					<div class="gtco-widget">
-						<h3>About<span class="footer-logo"> fast charge</h3>
-						<p></p>
-					</div>
-				</div>
-
-				<div class="col-md-4 col-md-push-1">
-					<div class="gtco-widget">
-						<h3>Links</h3>
-						<ul class="gtco-footer-links">
-							<li><a href="#">Terms of services</a></li>
-							<li><a href="#">Privacy Policy</a></li>
-						</ul>
-					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="gtco-widget">
-						<h3>Connect with us</h3>
-						<ul class="gtco-quick-contact">
-							<li><a href="#"><i class="icon-phone"></i> (رقم)+1 234 567 890</a></li>
-							<li><a href="#"><i class="icon-mail2"></i> fastchargecontact@gmail.com</a></li>
-							<li><a href="https://m.me/188175428474514"><i class="icon-chat"></i> Contact with Messenger</a></li>
-						</ul>
-					</div>
-				</div>
-
+	<footer class="foter">
+			<div class="col-md-12">
+				<p class="pull-left">
+					<small class="block">&copy; All rights reserved*_*</small>
+					<small class="block">Design<a href="#" target="_blank">________</a> Demo Images: <a href="#" target="_blank">______</a></small>
+				</p>
+				<p class="pull-right">
+					<ul class="gtco-social-icons pull-right">
+						<li><a href="#" target="_blank"><i class="icon-twitter"></i></a></li>
+						<li><a href="https://www.facebook.com/Fast-Charge-375526599838718/" target="_blank"><i class="icon-facebook"></i></a></li>
+						<li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li>
+						<li><a href="#" target="_blank"><i class="icon-dribbble"></i></a></li>
+						<li><a href="#" target="_blank"><i class="icon-instagram"></i></a></li>
+					</ul>
+				</p>
 			</div>
 
-			<div class="row copyright">
-				<div class="col-md-12">
-					<p class="pull-left">
-						<small class="block">&copy; All rights reserved Fast Charge</small>
-						<!-- <small class="block">Design<a href="#" target="_blank">________</a> Demo Images: <a href="#" target="_blank">______</a></small>  -->
-					</p>
-					<p class="pull-right">
-						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
-						</ul>
-					</p>
-				</div>
-			</div>
-
-		</div>
 	</footer>
 
 
