--- a/Code Salfeet/Email.html
+++ b/Code Salfeet/Email.html
@@ -244,11 +244,11 @@
 						</p>
 						<p class="pull-right">
 							<ul class="gtco-social-icons pull-right">
-								<li><a href="#"><i class="icon-twitter"></i></a></li>
-								<li><a href="#"><i class="icon-facebook"></i></a></li>
-								<li><a href="#"><i class="icon-linkedin"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble"></i></a></li>
-								<li><a href="#"><i class="icon-instagram"></i></a></li>
+								<li><a href="#" target="_blank"><i class="icon-twitter"></i></a></li>
+								<li><a href="https://www.facebook.com/Fast-Charge-375526599838718/" target="_blank"><i class="icon-facebook"></i></a></li>
+								<li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li>
+								<li><a href="#" target="_blank"><i class="icon-dribbble"></i></a></li>
+								<li><a href="#" target="_blank"><i class="icon-instagram"></i></a></li>
 							</ul>
 						</p>
 					</div>
