--- a/Code Salfeet/index.html
+++ b/Code Salfeet/index.html
@@ -57,7 +57,7 @@
 	<!-- Load Facebook SDK for JavaScript -->
 	<div id="fb-root"></div>
 	<script>
-	  window.fbAsyncInit = function() {
+		window.fbAsyncInit = function() {
 	    FB.init({
 	      xfbml            : true,
 	      version          : 'v3.3'
@@ -73,10 +73,7 @@
 	}(document, 'script', 'facebook-jssdk'));</script>
 
 	<!-- Your customer chat code -->
-	<div class="fb-customerchat"
-	  attribution=install_email
-	  page_id="375526599838718"
-	  theme_color="#0084ff">
+	<div class="fb-customerchat" attribution=install_email page_id="375526599838718" theme_color="#0084ff">
 	</div>
 	<div class="gtco-loader"></div>
 
@@ -125,6 +122,7 @@
 										<center>You can easily charge electricity or water meters through our website</center>
 									</h1>
 								</div>
+								</video>
 			</header>
 
 			<div class="gtco-section border-bottom">
@@ -314,8 +312,7 @@
 					<div class="row copyright">
 						<div class="col-md-12">
 							<p class="pull-left">
-								<small class="block">&copy; All rights reserved Fast Charge</small>
-								<!-- <small class="block">Design<a href="#" target="_blank">________</a> Demo Images: <a href="#" target="_blank">______</a></small>  -->
+								<small class="block">&copy; All rights reserved<a href="#" target="_blank"> Monsters Programming</a></small>
 							</p>
 							<p class="pull-right">
 								<ul class="gtco-social-icons pull-right">
