--- a/Code Salfeet/About U 1s.html
+++ b/Code Salfeet/About U 1s.html
@@ -8,6 +8,7 @@
 	<!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
 	<!--===============================================================================================-->
+	<link rel="stylesheet" href="css/bootstrap.css">
 	<!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 	<!--===============================================================================================-->
@@ -17,66 +18,25 @@
 	<!--===============================================================================================-->
 	<link rel="stylesheet" href="css/icomoon.css">
 
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Themify Icons-->
-	<link rel="stylesheet" href="css/themify-icons.css">
-	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="css/bootstrap.css">
 
-	<!-- Magnific Popup -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
-
-	<!-- Owl Carousel  -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-
-	<!-- Theme style  -->
-	<link rel="stylesheet" href="css/style1.css">
-	      <link rel="stylesheet" href="signin/css/style1.css">
-
-
-	<style>
-		.col-xs-8 {
-    width: 59.66667%;
-}
-a {
-    /* color: #ffffff; */
-    -webkit-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
-}
+<style>
 .bg-bubbles {
-    position: absolute;
+	position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     /* height: 100%; */
     z-index: 1;
-    /* margin-top: 800px; */
 }
-#page .page-inner {
-    max-width: 100%;
-    background: #fff;
-    margin: 0 auto;
-    overflow-x: hidden;
-    background: #50a3a2;
-    background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%);
-}
-	</style>
-
+</style>
 </head>
 
 <body>
 
 	<div id="page">
 
-		<div class="page-inner">
-
-
-
+	<div class="page-inner">
+		<div class="container-login100">
 			<nav class="gtco-nav" role="navigation">
 				<div class="gtco-container">
 
@@ -86,10 +46,10 @@ a {
 						</div>
 						<div class="col-xs-8 text-right menu-1">
 							<ul>
-							<li class="btn-cta"><a href="Sign in.html"><span>Sign in</span></a></li>
-							<li class="btn-cta"><a href="SignUp.html"><span>Sign Up</span></a></li>
+								<li class="btn-cta"><a href="Sign in.html"><span>Sign in</span></a></li>
+								<li class="btn-cta"><a href="SignUp.html"><span>Sign Up</span></a></li>
 								</li>
-									<li class="btn-cta"><a href="About Us.html"><span>About Us</span></a></li>
+								<li class="btn-cta"><a href="About Us.html"><span>About Us</span></a></li>
 								<li class="btn-cta"><a href="Contact.html"><span>Contact </span></a></li>
 								<li class="btn-cta"><a href="index.html"><span>Home</span></a></li>
 							</ul>
@@ -98,38 +58,37 @@ a {
 
 				</div>
 			</nav>
+		</div>
+	</div>
+	<section class="s2">
+		<div class="row2">
+			<center class="fast"><big>Fast Charge</big></center>
 
+			<p class="pp">
 
-		<section class="s2">
-			<div class="row2">
-				<center class="fast"><big>Fast Charge</big></center>
-
+				<!-- <center class="c"><big>Programming Monsters :</big><br></center> -->
+				<ol>
+					<li><h4>The importance of the site:</h4></li>
+					<li> 1- Save time and effort </li>
+					<li> 2- Reduce the theft of the pharaoh </li>
+					<li> 3- After payment center for some houses </li>
+					<li> 4- solve the problem of the elderly and people with special needs </li>
+					 
+				</ol>
+				<br>
 				<p class="pp">
-
-					<!-- <center class="c"><big>Programming Monsters :</big><br></center> -->
-					<ol>
-						<h4>The importance of the site:</h4>
-						<li> 1- Save time and effort </li>
-						<li> 2- Reduce the theft of the pharaoh </li>
-						<li> 3- After payment center for some houses </li>
-						<li> 4- solve the problem of the elderly and people with special needs </li>
-						 
-					</ol>
+					 <p> Payment method is either Visa
+						Through the visa card, when you enter the visa details, the value is deducted from the bank account attached to it.
+						Or advance payment, through the wallet that is stored on site</p>
 					<br>
-					<h2>payment methods</h2>
-					<p class="pp">
-						 <p> Payment method is either Visa
-							Through the visa card, when you enter the visa details, the value is deducted from the bank account attached to it.<br>
-							Or advance payment, through the wallet that is stored on site</p>
-						<br>
-
-					</p>
 				</p>
-			</div>
-		</section>
+			</p>
+		</div>
 
-<div class="foter">
-<div class="row copyright">
+	</section>
+
+		<footer class="foter">
+			<div class="row copyright">
 				<div class="col-md-12">
 					<p class="pull-left">
 						<small class="block">&copy; All rights reserved</small>
@@ -137,45 +96,32 @@ a {
 					</p>
 					<p class="pull-right">
 						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://www.facebook.com/Fast-Charge-375526599838718/" target="_blank"><i class="icon-facebook"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-dribbble"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-instagram"></i></a></li>
 						</ul>
-
 					</p>
 				</div>
 			</div>
-
-
-
-</div>
-
-
-
-<ul class="bg-bubbles">
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-</ul>
-
-
-
-
-
-
-
+		</footer>
+		<ul class="bg-bubbles">
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+	</ul>
 		<div class="gototop js-top">
 			<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 		</div>
+
 		<!--===============================================================================================-->
 		<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 		<!--===============================================================================================-->
