--- a/Code Salfeet/Contact1.html
+++ b/Code Salfeet/Contact1.html
@@ -5,9 +5,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
+<link rel="stylesheet" href="css/animate.css">
 	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <!--===============================================================================================-->
@@ -21,35 +22,8 @@
 <!--===============================================================================================-->
 
 		<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
-
-<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main2.css">
-	
-		<link rel="stylesheet" href="css/bootstrap.css">
-		
-		<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Themify Icons-->
-	<link rel="stylesheet" href="css/themify-icons.css">
-	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="css/bootstrap.css">
-
-	<!-- Magnific Popup -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
-
-	<!-- Owl Carousel  -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-
-	<!-- Theme style  -->
-	<link rel="stylesheet" href="css/style1.css">
-		      <link rel="stylesheet" href="signin/css/style1.css">
-
 
 
 <!--===============================================================================================-->
@@ -67,15 +41,6 @@
     z-index: 1;
     margin-top: 520px;
 }
-.row {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    margin-right: 0;
-    margin-left: 0;
-}
-
 </style>
 
 </head>
@@ -112,7 +77,7 @@
 
 			<div class="wrap-contact100">
 				<div class="contact100-pic js-tilt" data-tilt>
-					<img src="images/contact.png" alt="IMG">
+					<img src="images/img-02.png" alt="IMG">
 				</div>
 
 				<form class="contact100-form validate-form">
@@ -150,31 +115,6 @@
 			</div>
 		</div>
 	</div>
-	
-	
-			
-<div class="foter">
-<div class="row copyright">
-				<div class="col-md-12">
-					<p class="pull-left">
-						<small class="block">&copy; All rights reserved</small>
-						<small class="block">Design<a href="#" target="_blank"> Monsters Programming</a>
-					</p>
-					<p class="pull-right">
-						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
-						</ul>
-					</p>
-				</div>
-			</div>
-
-
-
-</div>
 	<ul class="bg-bubbles">
 		<li></li>
 		<li></li>
@@ -187,8 +127,25 @@
 		<li></li>
 		<li></li>
 	</ul>
-	
-	
+	<footer class="foter">
+			<div class="col-md-12">
+				<p class="pull-left">
+					<small class="block">&copy; All rights reserved*_*</small>
+					<small class="block">Design<a href="#" target="_blank">________</a> Demo Images: <a href="#" target="_blank">______</a></small>
+				</p>
+				<p class="pull-right">
+					<ul class="gtco-social-icons pull-right">
+						<li><a href="#" target="_blank"><i class="icon-twitter"></i></a></li>
+						<li><a href="https://www.facebook.com/Fast-Charge-375526599838718/" target="_blank"><i class="icon-facebook"></i></a></li>
+						<li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li>
+						<li><a href="#" target="_blank"><i class="icon-dribbble"></i></a></li>
+						<li><a href="#" target="_blank"><i class="icon-instagram"></i></a></li>
+					</ul>
+				</p>
+			</div>
+
+	</footer>
+
 
 
 <!--===============================================================================================-->
