--- a/Code Salfeet/welcome 1.html
+++ b/Code Salfeet/welcome 1.html
@@ -8,72 +8,47 @@
 	<!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="images/icons/favicon.ico" />
 	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
-	<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-	<!--===============================================================================================-->
 	<link rel="stylesheet" href="css/bootstrap.css">
-
-    <link rel="stylesheet" href="signin/css/style1.css">
 	<link rel="stylesheet" href="css/welcome.css">
 
-
-		<!-- Animate.css -->
+	<!-- Animate.css -->
+	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Themify Icons-->
-	<link rel="stylesheet" href="css/themify-icons.css">
+	<!-- Theme style  -->
+	<style>
 
-		<style>
-			.fast {
-				margin: 20px;
-				font-weight: bold;
-				font-size: 50px;
-				color: #000000;
-			}
+	.col-xs-8 {
+	    width: 59.66667%;
+		}
+		.login100-form-title {
+	    font-family: Poppins-Bold;
+	    font-size: 24px;
+	    color: #333333;
+	    line-height: 1.2;
+	    text-align: center;
+	    width: 100%;
+	    display: block;
+	    padding-bottom: 54px;
+	    padding-top: 60px;
 
+	}
+	a {
+	    -webkit-transition: 0.5s;
+	    -o-transition: 0.5s;
+	    transition: 0.5s;
+	}
+	.bg-bubbles {
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    width: 100%;
+	    /* height: 100%; */
+	    z-index: 1;
+	    margin-top: 978px;
+	}
 
-			ul,
-			ol {
-				margin-top: 0;
-				margin-bottom: 10px;
-				/* float: right; */
-				margin: 0px;
-				padding: 0;
-				color: #000000;
-				font-size: 20px;
-				margin-left: 10px;
-			}
-
-			p {
-				margin: 0 0 10px;
-				font-size: 20px;
-				color: #000000;
-				margin-left: 10px;
-			}
-
-			.c {
-				font-size: 20px;
-				color: #000000;
-
-			}
-
-			.c1 {
-				font-size: 20px;
-				color: #000000;
-
-			}
-			a.block1{
-			color:rad;
-			color: #ff0000;
-			}
-		</style>
+	</style>
 </head>
 
 <body>
@@ -104,11 +79,11 @@
 			<div class="con">
 				<div class="row1">
 					<P class="p0">
-						welcome back <a href="welcome.html">your name</a>
+						welcome back <a href="sign in.html">your name</a>
 
-						<!--<a href="" class="setting"> My wallet</a>-->
-						<a href="setting.html" class="setting"> setting</a><br>
-						<a href="sign in.html" class="setting1"> sign out</a><br>
+						<a href="" class="setting"> My wallet</a>
+						<a href="" class="setting"> setting</a><br>
+						<a href="sign in.html" class="setting1"> exit</a><br>
 					</p>
 
 				</div>
@@ -281,31 +256,26 @@
 
 
 	</form>
-
-
-<div class="foter">
-<div class="row copyright">
-				<div class="col-md-12">
-					<p class="pull-left">
-						<small class="block">&copy; All rights reserved</small>
-						<small class="block">Design<a href="#" target="_blank" class="block1"> Monsters Programming</a>
-					</p>
-					<p class="pull-right">
-						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
-						</ul>
-					</p>
-				</div>
+	<footer class="foter">
+		<div class="row copyright">
+			<div class="col-md-12">
+				<p class="pull-left">
+					<small class="block">&copy; All rights reserved</small>
+					<small class="block">Design<a href="#" target="_blank"> Monsters Programming</a>
+				</p>
+				<p class="pull-right">
+					<ul class="gtco-social-icons pull-right">
+						<li><a href="#" target="_blank"><i class="icon-twitter"></i></a></li>
+						<li><a href="https://www.facebook.com/Fast-Charge-375526599838718/" target="_blank"><i class="icon-facebook"></i></a></li>
+						<li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li>
+						<li><a href="#" target="_blank"><i class="icon-dribbble"></i></a></li>
+						<li><a href="#" target="_blank"><i class="icon-instagram"></i></a></li>
+					</ul>
+				</p>
 			</div>
+		</div>
 
-
-
-</div>
-
+	</footer>
 	<ul class="bg-bubbles">
 		<li></li>
 		<li></li>
@@ -318,13 +288,10 @@
 		<li></li>
 		<li></li>
 	</ul>
-
-
-		</div>
-
-		<div class="gototop js-top active">
-				<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
-			</div>
+	<div class="gototop js-top">
+		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
+	</div>
+	</div>
 </body>
 	<!--===============================================================================================-->
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
@@ -343,14 +310,6 @@
 	<!--===============================================================================================-->
 	<script src="js/main.js"></script>
 
-		<!-- jQuery -->
-		<script src="js/jquery.min.js"></script>
-		<!-- jQuery Easing -->
-		<script src="js/jquery.easing.1.3.js"></script>
-		<!-- Waypoints -->
-		<script src="js/jquery.waypoints.min.js"></script>
-		<!-- Carousel -->
-		<script src="js/owl.carousel.min.js"></script>
 
 
 </html>
